# custom-manjaro-icons

./: README.md
Manjaro-Papirus-hicolor/: README.md
icons/: CMakeLists.txt  index.theme
icons-dark/: CMakeLists.txt  index.theme
